add side nav and home page

--- a/src/component/NavHead/NavHead.module.scss
+++ b/src/component/NavHead/NavHead.module.scss
@@ -1,5 +1,6 @@
 .navhead {
     position: relative;
-    // background-color: blue;
-    height: 50px;
+    background-color: white;
+    line-height: 40px;
+    box-shadow: 0px 0px 10px grey;
 }
