--- a/src/component/NavSide/NavSide.module.scss
+++ b/src/component/NavSide/NavSide.module.scss
@@ -1,30 +1,75 @@
+$top: 56px;
+
 .sidebar {
     position: fixed;
-    top: 0;
+    top: $top;
     bottom: 0;
     left: 0;
     height: 100%;
-    background-color: red;
-    padding-top: 40px;
+    padding-top: 25px;
     width: 260px;
     background-color: #333;
     color: #b5b5b5;
+}
+
+.logo {
+    color: red;
+    font-weight: 700;
+    font-size: 30px;
+    position: absolute;
+    top: 0;
+    width: 260px;
+    background-color: rgb(63, 62, 62);
+    padding-left: 20px;
+    padding-top: 5px;
+    color: #bf781c;
+    cursor: pointer;
+    height: $top;
+}
+.logo:hover {
+    color: burlywood;
+    text-decoration: none;
+}
+.logo > h1 {
+    margin: 0;
+}
+
+.title.selected, .subItem.selected {
+    background-color: #bf781c;
+}
+.title {
+    line-height: 54px;
+    padding-left: 10px;
 }
 
 .item {
     color: #b5b5b5;
 }
 
+.linkText {
+    color: #b5b5b5;
+}
+.linkText:hover {
+    color: burlywood;
+    text-decoration: none;
+}
+
 .subItem {
     color: #b5b5b5;
     background-color: #111;
+    line-height: 40px;
+    padding-left: 30px;
 }
-
-.item:hover, .subItem:hover {
+.subItem:hover {
     color: burlywood;
     text-decoration: none;
 }
 
 .fa {
     padding-right: 15px;
+}
+
+.faAngleDown {
+    float: right;
+    padding-right: 10px;
 }
