fix bugs and add category list

--- a/src/page/category/category/CategoryList.module.scss
+++ b/src/page/category/category/CategoryList.module.scss
@@ -2,7 +2,7 @@
     background-color: white;
 }
 
-.changeStatusBtn {
-    padding: 5px 5px;
+.editBtn {
+    padding: 5px 10px;
     margin-left: 10px;
 }
