--- a/src/page/product/product/EditProduct.module.scss
+++ b/src/page/product/product/EditProduct.module.scss
@@ -6,3 +6,17 @@
 .priceInput {
     width: 50px;
 }
+
+.imgCon {
+    width: 130px;
+    height: 130px;
+    margin-bottom: 20px;
+}
+.img {
+    width: 100%;
+    height: 100%;
+}
+
+.cancelButton {
+    margin-left: 5px;
+}
