--- a/src/page/product/product/ProductDetail.module.scss
+++ b/src/page/product/product/ProductDetail.module.scss
@@ -1,3 +1,13 @@
 .itemTitle {
     font-weight: 700;
 }
+
+.imgCon {
+    width: 130px;
+    height: 130px;
+    margin-bottom: 20px;
+}
+.img {
+    width: 100%;
+    height: 100%;
+}
