--- a/src/page/product/product/ProductList.module.scss
+++ b/src/page/product/product/ProductList.module.scss
@@ -6,3 +6,13 @@
     padding: 5px 5px;
     margin-left: 10px;
 }
+
+.title{
+    display: inline-block;
+}
+
+.addProductBtn {
+    float: right;
+    margin-top: 10px;
+    // display: inline-block;
+}
